Making the entire code compilable. Refactoring of ParserTest and related assertion classes, to work with column based approach (WIP).